Fix metadata bar: replace Unicode box-drawing with Markdown table in 62 files - Converted all Unicode box (┌─┤└) metadata bars --> proper Markdown table format - Markdown tables render as aligned HTML in GitHub Pages (browser-font independent) - Updated DICTIONARY_TEMPLATE.md: new metadata bar format - Updated CUSTOM_INSTRUCTIONS.md: Rule 4 added (Entry Metadata Bar must use Markdown table) - Updated CUSTOM_INSTRUCTIONS.md: folder table reflects split Java/Java Language/Java Concurrency New metadata bar format: | #NNN | Category: X | Difficulty: ★★☆ | |:---|:---|:---| | **Depends on:** | Concept1, Concept2 | | | **Used by:** | Consumer1, Consumer2 | |